Setting routers and security

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-TOGETHER_API_KEY=tgp_v1_LpcIX5oEgGzXQJUZyeK11cXg5Ao9wDIN1erGCg1Lakk
+HUGGINGFACEHUB_API_TOKEN=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
+SECRETE_KEY = secrets.token_urlsafe()
